--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -65,7 +65,6 @@ jobs:
       AIFACTORY_SALT: ${{ vars.AIFACTORY_SALT }}
       AIFACTORY_SALT_RANDOM: ${{ vars.AIFACTORY_SALT_RANDOM }}
       deployment_random_value: ''
-      aifactory_salt: ${{ vars.AIFACTORY_SALT || '' }}
 
       # Network env debug mirrors (match ADO debug params)
       network_env_dev: ${{ vars.DEV_NETWORK_ENV || vars.NETWORK_ENV || 'dev' }}
@@ -810,7 +809,7 @@ jobs:
                     --parameters DEBUG_admin_aifactorySuffixRG="${{ env.admin_aifactorySuffixRG }}" \
                     --parameters DEBUG_admin_commonResourceSuffix="${{ env.admin_commonResourceSuffix }}" \
                     --parameters DEBUG_admin_prjResourceSuffix="${{ env.admin_prjResourceSuffix }}" \
-                    --parameters DEBUG_aifactory_salt="${{ env.aifactory_salt }}" \
+                    --parameters DEBUG_aifactory_salt="${{ env.AIFACTORY_SALT }}" \
                     --parameters DEBUG_admin_projectType="${{ env.admin_projectType }}" \
                     --parameters DEBUG_project_number_000="${{ env.project_number_000 }}" \
                     --parameters DEBUG_project_service_principal_AppID_seeding_kv_name="${{ env.project_service_principal_AppID_seeding_kv_name }}" \
