--- a/.github/workflows/infra-common.yml
+++ b/.github/workflows/infra-common.yml
@@ -47,9 +47,9 @@ jobs:
       tags: "${{ vars.TAGS }}"
       runNetworkingVar: "${{ vars.RUN_JOB1_NETWORKING || 'true' }}"
       BYO_subnets: "${{ vars.BYO_SUBNETS || 'false' }}"
-      vnetNameBase: "${{ vars.VNET_NAME_BASE }}"
-      vnetResourceGroupBase: "${{ vars.VNET_RESOURCE_GROUP_BASE }}"
-      common_subnet_name: "${{ vars.COMMON_SUBNET_NAME }}"
+      vnetNameBase: "${{ vars.VNET_NAME_BASE || 'vnt-esmlcmn' }}"
+      vnetResourceGroupBase: "${{ vars.VNET_RESOURCE_GROUP_BASE || 'esml-common' }}"
+      common_subnet_name: "${{ vars.COMMON_SUBNET_NAME || vars.SUBNET_COMMON_BASE || 'snet-esml-cmn-001' }}"
       common_vnet_cidr: "${{ vars.COMMON_VNET_CIDR }}"
       common_subnet_cidr: "${{ vars.COMMON_SUBNET_CIDR }}"
       common_subnet_scoring_cidr: "${{ vars.COMMON_SUBNET_SCORING_CIDR }}"
@@ -57,15 +57,15 @@ jobs:
       common_pbi_subnet_cidr: "${{ vars.COMMON_PBI_SUBNET_CIDR }}"
       common_bastion_subnet_name: "${{ vars.COMMON_BASTION_SUBNET_NAME }}"
       common_bastion_subnet_cidr: "${{ vars.COMMON_BASTION_SUBNET_CIDR }}"
-      vnetResourceGroup_param: "${{ vars.DEV_BYO_VNET_RG || vars.VNET_RESOURCE_GROUP_PARAM }}"
-      vnetNameFull_param: "${{ vars.DEV_BYO_VNET_NAME || vars.VNET_NAME_FULL_PARAM }}"
+      vnetResourceGroup_param: "${{ vars.VNET_RESOURCE_GROUP_PARAM || '' }}"
+      vnetNameFull_param: "${{ vars.VNET_NAME_FULL_PARAM || '' }}"
       commonResourceGroup_param: "${{ vars.COMMON_RESOURCE_GROUP_PARAM }}"
       datalakeName_param: "${{ vars.DATALAKE_NAME_PARAM }}"
       kvNameFromCOMMON_param: "${{ vars.KV_NAME_FROM_COMMON_PARAM }}"
       useCommonACR_override: "${{ vars.USE_COMMON_ACR_OVERRIDE }}"
-      subnetCommon: "${{ vars.SUBNET_COMMON }}"
-      subnetCommonScoring: "${{ vars.SUBNET_COMMON_SCORING }}"
-      subnetCommonPowerbiGw: "${{ vars.SUBNET_COMMON_POWERBI_GW }}"
+      subnetCommon: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON || '' }}"
+      subnetCommonScoring: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON_SCORING || '' }}"
+      subnetCommonPowerbiGw: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON_POWERBI_GW || '' }}"
       subnetProjGenAI: "${{ vars.SUBNET_PROJ_GENAI }}"
       subnetProjAKS: "${{ vars.SUBNET_PROJ_AKS }}"
       subnetProjACA: "${{ vars.SUBNET_PROJ_ACA }}"
@@ -337,9 +337,9 @@ jobs:
       tags: "${{ vars.TAGS }}"
       runNetworkingVar: "${{ vars.RUN_JOB1_NETWORKING || 'true' }}"
       BYO_subnets: "${{ vars.BYO_SUBNETS || 'false' }}"
-      vnetNameBase: "${{ vars.VNET_NAME_BASE }}"
-      vnetResourceGroupBase: "${{ vars.VNET_RESOURCE_GROUP_BASE }}"
-      common_subnet_name: "${{ vars.COMMON_SUBNET_NAME }}"
+      vnetNameBase: "${{ vars.VNET_NAME_BASE || 'vnt-esmlcmn' }}"
+      vnetResourceGroupBase: "${{ vars.VNET_RESOURCE_GROUP_BASE || 'esml-common' }}"
+      common_subnet_name: "${{ vars.COMMON_SUBNET_NAME || vars.SUBNET_COMMON_BASE || 'snet-esml-cmn-001' }}"
       common_vnet_cidr: "${{ vars.COMMON_VNET_CIDR }}"
       common_subnet_cidr: "${{ vars.COMMON_SUBNET_CIDR }}"
       common_subnet_scoring_cidr: "${{ vars.COMMON_SUBNET_SCORING_CIDR }}"
@@ -347,15 +347,15 @@ jobs:
       common_pbi_subnet_cidr: "${{ vars.COMMON_PBI_SUBNET_CIDR }}"
       common_bastion_subnet_name: "${{ vars.COMMON_BASTION_SUBNET_NAME }}"
       common_bastion_subnet_cidr: "${{ vars.COMMON_BASTION_SUBNET_CIDR }}"
-      vnetResourceGroup_param: "${{ vars.STAGE_BYO_VNET_RG || vars.VNET_RESOURCE_GROUP_PARAM }}"
-      vnetNameFull_param: "${{ vars.STAGE_BYO_VNET_NAME || vars.VNET_NAME_FULL_PARAM }}"
+      vnetResourceGroup_param: "${{ vars.VNET_RESOURCE_GROUP_PARAM || '' }}"
+      vnetNameFull_param: "${{ vars.VNET_NAME_FULL_PARAM || '' }}"
       commonResourceGroup_param: "${{ vars.COMMON_RESOURCE_GROUP_PARAM }}"
       datalakeName_param: "${{ vars.DATALAKE_NAME_PARAM }}"
       kvNameFromCOMMON_param: "${{ vars.KV_NAME_FROM_COMMON_PARAM }}"
       useCommonACR_override: "${{ vars.USE_COMMON_ACR_OVERRIDE }}"
-      subnetCommon: "${{ vars.SUBNET_COMMON }}"
-      subnetCommonScoring: "${{ vars.SUBNET_COMMON_SCORING }}"
-      subnetCommonPowerbiGw: "${{ vars.SUBNET_COMMON_POWERBI_GW }}"
+      subnetCommon: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON || '' }}"
+      subnetCommonScoring: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON_SCORING || '' }}"
+      subnetCommonPowerbiGw: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON_POWERBI_GW || '' }}"
       subnetProjGenAI: "${{ vars.SUBNET_PROJ_GENAI }}"
       subnetProjAKS: "${{ vars.SUBNET_PROJ_AKS }}"
       subnetProjACA: "${{ vars.SUBNET_PROJ_ACA }}"
@@ -626,9 +626,9 @@ jobs:
       tags: "${{ vars.TAGS }}"
       runNetworkingVar: "${{ vars.RUN_JOB1_NETWORKING || 'true' }}"
       BYO_subnets: "${{ vars.BYO_SUBNETS || 'false' }}"
-      vnetNameBase: "${{ vars.VNET_NAME_BASE }}"
-      vnetResourceGroupBase: "${{ vars.VNET_RESOURCE_GROUP_BASE }}"
-      common_subnet_name: "${{ vars.COMMON_SUBNET_NAME }}"
+      vnetNameBase: "${{ vars.VNET_NAME_BASE || 'vnt-esmlcmn' }}"
+      vnetResourceGroupBase: "${{ vars.VNET_RESOURCE_GROUP_BASE || 'esml-common' }}"
+      common_subnet_name: "${{ vars.COMMON_SUBNET_NAME || vars.SUBNET_COMMON_BASE || 'snet-esml-cmn-001' }}"
       common_vnet_cidr: "${{ vars.COMMON_VNET_CIDR }}"
       common_subnet_cidr: "${{ vars.COMMON_SUBNET_CIDR }}"
       common_subnet_scoring_cidr: "${{ vars.COMMON_SUBNET_SCORING_CIDR }}"
@@ -636,15 +636,15 @@ jobs:
       common_pbi_subnet_cidr: "${{ vars.COMMON_PBI_SUBNET_CIDR }}"
       common_bastion_subnet_name: "${{ vars.COMMON_BASTION_SUBNET_NAME }}"
       common_bastion_subnet_cidr: "${{ vars.COMMON_BASTION_SUBNET_CIDR }}"
-      vnetResourceGroup_param: "${{ vars.PROD_BYO_VNET_RG || vars.VNET_RESOURCE_GROUP_PARAM }}"
-      vnetNameFull_param: "${{ vars.PROD_BYO_VNET_NAME || vars.VNET_NAME_FULL_PARAM }}"
+      vnetResourceGroup_param: "${{ vars.VNET_RESOURCE_GROUP_PARAM || '' }}"
+      vnetNameFull_param: "${{ vars.VNET_NAME_FULL_PARAM || '' }}"
       commonResourceGroup_param: "${{ vars.COMMON_RESOURCE_GROUP_PARAM }}"
       datalakeName_param: "${{ vars.DATALAKE_NAME_PARAM }}"
       kvNameFromCOMMON_param: "${{ vars.KV_NAME_FROM_COMMON_PARAM }}"
       useCommonACR_override: "${{ vars.USE_COMMON_ACR_OVERRIDE }}"
-      subnetCommon: "${{ vars.SUBNET_COMMON }}"
-      subnetCommonScoring: "${{ vars.SUBNET_COMMON_SCORING }}"
-      subnetCommonPowerbiGw: "${{ vars.SUBNET_COMMON_POWERBI_GW }}"
+      subnetCommon: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON || '' }}"
+      subnetCommonScoring: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON_SCORING || '' }}"
+      subnetCommonPowerbiGw: "${{ vars.BYO_SUBNETS == 'true' && vars.SUBNET_COMMON_POWERBI_GW || '' }}"
       subnetProjGenAI: "${{ vars.SUBNET_PROJ_GENAI }}"
       subnetProjAKS: "${{ vars.SUBNET_PROJ_AKS }}"
       subnetProjACA: "${{ vars.SUBNET_PROJ_ACA }}"
