--- a/.github/workflows/infra-project.yml
+++ b/.github/workflows/infra-project.yml
@@ -106,17 +106,11 @@ jobs:
       kvNameFromCOMMON_param: ${{ vars.KV_NAME_FROM_COMMON_PARAM || '' }}
 
       # BYO overrides
-      vnetResourceGroup_param: ${{ github.event.inputs.environment == 'dev' && (vars.DEV_BYO_VNET_RG || vars.VNET_RESOURCE_GROUP_PARAM || '')
-        || github.event.inputs.environment == 'stage' && (vars.STAGE_BYO_VNET_RG || vars.VNET_RESOURCE_GROUP_PARAM || '')
-        || github.event.inputs.environment == 'prod' && (vars.PROD_BYO_VNET_RG || vars.VNET_RESOURCE_GROUP_PARAM || '')
-        || vars.VNET_RESOURCE_GROUP_PARAM || '' }}
-      vnetNameFull_param: ${{ github.event.inputs.environment == 'dev' && (vars.DEV_BYO_VNET_NAME || vars.VNET_NAME_FULL_PARAM || '')
-        || github.event.inputs.environment == 'stage' && (vars.STAGE_BYO_VNET_NAME || vars.VNET_NAME_FULL_PARAM || '')
-        || github.event.inputs.environment == 'prod' && (vars.PROD_BYO_VNET_NAME || vars.VNET_NAME_FULL_PARAM || '')
-        || vars.VNET_NAME_FULL_PARAM || '' }}
-      subnetCommon: ${{ vars.SUBNET_COMMON || '' }}
-      subnetCommonScoring: ${{ vars.SUBNET_COMMON_SCORING || '' }}
-      subnetCommonPowerbiGw: ${{ vars.SUBNET_COMMON_POWERBI_GW || '' }}
+      vnetResourceGroup_param: ${{ vars.VNET_RESOURCE_GROUP_PARAM || '' }}
+      vnetNameFull_param: ${{ vars.VNET_NAME_FULL_PARAM || '' }}
+      subnetCommon: ${{ vars.BYO_SUBNETS == 'true' && (vars.SUBNET_COMMON || '') || '' }}
+      subnetCommonScoring: ${{ vars.BYO_SUBNETS == 'true' && (vars.SUBNET_COMMON_SCORING || '') || '' }}
+      subnetCommonPowerbiGw: ${{ vars.BYO_SUBNETS == 'true' && (vars.SUBNET_COMMON_POWERBI_GW || '') || '' }}
       subnetProjGenAI: ${{ vars.SUBNET_PROJ_GENAI || '' }}
       subnetProjAKS: ${{ vars.SUBNET_PROJ_AKS || '' }}
       subnetProjAKS2: ${{ vars.SUBNET_PROJ_AKS2 || '' }}
@@ -351,14 +345,31 @@ jobs:
                 if (-not $Env:aifactory_salt_random -or $Env:aifactory_salt_random -eq '') { "aifactory_salt_random=${{ env.AIFACTORY_SALT_RANDOM }}" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append }
 
             - name: Resolve network env placeholders
+              shell: bash
               run: |
-                $networkEnv = $Env:network_env
-                $vnetRg = '${{ env.vnetResourceGroup_param }}'
-                $vnetName = '${{ env.vnetNameFull_param }}'
-                if ($vnetRg -like '*<network_env>*') { $vnetRg = $vnetRg -replace '<network_env>', $networkEnv }
-                if ($vnetName -like '*<network_env>*') { $vnetName = $vnetName -replace '<network_env>', $networkEnv }
-                "vnetResourceGroup_resolved=$vnetRg" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
-                "vnetNameFull_resolved=$vnetName" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+                set -e
+                NETWORK_ENV="${{ env.network_env }}"
+                VNET_RG="${{ env.vnetResourceGroup_param }}"
+                VNET_NAME="${{ env.vnetNameFull_param }}"
+
+                echo "Original vnetResourceGroup_param: $VNET_RG"
+                echo "Original vnetNameFull_param: $VNET_NAME"
+                echo "network_env value: $NETWORK_ENV"
+
+                if [[ "$VNET_RG" == *"<network_env>"* ]]; then
+                  echo "Found <network_env> placeholder in vnetResourceGroup_param"
+                  VNET_RG="${VNET_RG//<network_env>/$NETWORK_ENV}"
+                fi
+
+                if [[ "$VNET_NAME" == *"<network_env>"* ]]; then
+                  echo "Found <network_env> placeholder in vnetNameFull_param"
+                  VNET_NAME="${VNET_NAME//<network_env>/$NETWORK_ENV}"
+                fi
+
+                echo "vnetResourceGroup_resolved=$VNET_RG" >> $GITHUB_ENV
+                echo "vnetNameFull_resolved=$VNET_NAME" >> $GITHUB_ENV
+                echo "Resolved vnetResourceGroup: $VNET_RG"
+                echo "Resolved vnetNameFull: $VNET_NAME"
 
             - name: Print info
               run: |
