--- a/.github/workflows/infra-common.yml
+++ b/.github/workflows/infra-common.yml
@@ -26,7 +26,7 @@ jobs:
       dev_test_prod: dev
       dev_test_prod_sub_id: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
       network_env: "${{ vars.DEV_NETWORK_ENV || vars.NETWORK_ENV || 'dev' }}"
-      cidr_range: "${{ vars.DEV_CIDR_RANGE }}"
+      cidr_range: "${{ vars.CIDR_RANGE }}"
       admin_location: "${{ vars.AIFACTORY_LOCATION }}"
       admin_locationSuffix: "${{ vars.AIFACTORY_LOCATION_SHORT }}"
       admin_aifactoryPrefixRG: "${{ vars.AIFACTORY_PREFIX }}"
@@ -334,7 +334,7 @@ jobs:
       dev_test_prod: test
       dev_test_prod_sub_id: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
       network_env: "${{ vars.STAGE_NETWORK_ENV || vars.NETWORK_ENV || 'test' }}"
-      cidr_range: "${{ vars.STAGE_CIDR_RANGE }}"
+      cidr_range: "${{ vars.CIDR_RANGE }}"
       admin_location: "${{ vars.AIFACTORY_LOCATION }}"
       admin_locationSuffix: "${{ vars.AIFACTORY_LOCATION_SHORT }}"
       admin_aifactoryPrefixRG: "${{ vars.AIFACTORY_PREFIX }}"
@@ -641,7 +641,7 @@ jobs:
       dev_test_prod: prod
       dev_test_prod_sub_id: "${{ vars.AZURE_SUBSCRIPTION_ID }}"
       network_env: "${{ vars.PROD_NETWORK_ENV || vars.NETWORK_ENV || 'prod' }}"
-      cidr_range: "${{ vars.PROD_CIDR_RANGE }}"
+      cidr_range: "${{ vars.CIDR_RANGE }}"
       admin_location: "${{ vars.AIFACTORY_LOCATION }}"
       admin_locationSuffix: "${{ vars.AIFACTORY_LOCATION_SHORT }}"
       admin_aifactoryPrefixRG: "${{ vars.AIFACTORY_PREFIX }}"
