--- a/.github/workflows/infra-common.yml
+++ b/.github/workflows/infra-common.yml
@@ -89,7 +89,7 @@ jobs:
       enableDatafactoryCommon: "${{ vars.ENABLE_DATAFACTORY_COMMON || 'false' }}"
       acr_adminUserEnabled: "${{ vars.ACR_ADMIN_USER_ENABLED }}"
       acr_dedicated: "${{ vars.ACR_DEDICATED }}"
-      acr_SKU: "${{ vars.ACR_SKU }}"
+      acr_SKU: "${{ vars.ACR_SKU || 'Premium' }}"
       enablePublicAccessWithPerimeter: "${{ vars.ENABLE_PUBLIC_ACCESS_WITH_PERIMETER }}"
       admin_hybridBenefit: "${{ vars.ADMIN_HYBRID_BENEFIT }}"
       commonLakeNamePrefixMax8chars: "${{ vars.COMMON_LAKE_NAME_PREFIX_MAX8CHARS }}"
@@ -394,7 +394,7 @@ jobs:
       enableDatafactoryCommon: "${{ vars.ENABLE_DATAFACTORY_COMMON || 'false' }}"
       acr_adminUserEnabled: "${{ vars.ACR_ADMIN_USER_ENABLED }}"
       acr_dedicated: "${{ vars.ACR_DEDICATED }}"
-      acr_SKU: "${{ vars.ACR_SKU }}"
+      acr_SKU: "${{ vars.ACR_SKU || 'Premium' }}"
       enablePublicAccessWithPerimeter: "${{ vars.ENABLE_PUBLIC_ACCESS_WITH_PERIMETER }}"
       admin_hybridBenefit: "${{ vars.ADMIN_HYBRID_BENEFIT }}"
       commonLakeNamePrefixMax8chars: "${{ vars.COMMON_LAKE_NAME_PREFIX_MAX8CHARS }}"
@@ -698,7 +698,7 @@ jobs:
       enableDatafactoryCommon: "${{ vars.ENABLE_DATAFACTORY_COMMON || 'false' }}"
       acr_adminUserEnabled: "${{ vars.ACR_ADMIN_USER_ENABLED }}"
       acr_dedicated: "${{ vars.ACR_DEDICATED }}"
-      acr_SKU: "${{ vars.ACR_SKU }}"
+      acr_SKU: "${{ vars.ACR_SKU || 'Premium' }}"
       enablePublicAccessWithPerimeter: "${{ vars.ENABLE_PUBLIC_ACCESS_WITH_PERIMETER }}"
       admin_hybridBenefit: "${{ vars.ADMIN_HYBRID_BENEFIT }}"
       commonLakeNamePrefixMax8chars: "${{ vars.COMMON_LAKE_NAME_PREFIX_MAX8CHARS }}"
